<resources>
    <string name="app_name">Carpanion</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="signUp">Sign Up</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="logout">Logout</string>
    <string name="plus">+</string>
    <string name="createTrip">+ Create Trip</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="createTripButton">Create Trip</string>
    <string name="chooseNoOfPassengers">Number of Passengers</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="selectProfileButton">Upload Profile Image</string>
    <string name="createAccount">Create an Account</string>
    <string name="create_account">Create Account</string>
    <string name="settings">Settings</string>
    <string name="reserveASeat">Reserve a Seat</string>
    <string name="driver">Driver</string>
    <string name="passenger">Passenger</string>
    <string name="myTrip">My Trip</string>
    <string name="passengers">Passengers</string>
    <string name="message">Message</string>
    <string name="send">SEND</string>
    <string name="messages">Messages</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="first">1st</string>
    <string name="zeropts">0pts</string>
    <string name="tripComplete">Trip Complete</string>
    <string name="startTrip">Start Trip</string>
    <string name="ratePassengers">Rate Passengers</string>
    <string name="rateDriver">Rate Driver</string>
    <string-array name="userType">
        <item>Driver</item>
        <item>Passenger</item>
    </string-array>
    <string-array name="noOfPassengers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>
