<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="50sp"
    android:paddingRight="50sp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    tools:context="com.ronan.carpanion.activities.LogInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_white" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="7pt" />

    <TextView
        android:id="@+id/logoText"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20pt" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/inputGrey"
        android:textColorHint="@color/inputGrey"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="7pt" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/inputGrey"
        android:textColorHint="@color/inputGrey"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="7pt" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/purple_button"
        android:textAllCaps="false"
        android:textSize="8pt"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/login"
        tools:text="@string/login" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20pt" />

    <Button
        android:id="@+id/signUpButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_button"
        android:text="@string/createAccount"
        android:textAllCaps="false"
        android:textSize="8pt"
        android:textColor="@color/white" />

</LinearLayout>
