<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.TripCompleteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:padding="15dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="5dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_arrow_back_white_24dp" />

        <TextView
            android:id="@+id/tripCompleteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_weight="5"
            android:text="@string/tripComplete"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:padding="25dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/rateDriver"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="5" />

            <TextView
                android:id="@+id/driverName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/driver"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="5" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/thumbsDown"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_thumb_down_white" />

                <ImageButton
                    android:id="@+id/thumbsUp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="-4dp"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_thumb_up_white" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/leavingImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_circle_hollow_purple" />

        <TextView
            android:id="@+id/departure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="TextView"
            android:textSize="20dp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/arrivingImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_circle_fill_purple" />

        <TextView
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="TextView"
            android:textSize="20dp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/passengerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/ratePassengers"
        android:textSize="20dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <ListView
        android:id="@+id/passengers"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>