<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context=".activities.MyTripActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:padding="15dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="5dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_arrow_back_white_24dp" />

        <TextView
            android:id="@+id/myTripText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_weight="5"
            android:text="@string/myTrip"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:orientation="vertical"
        android:padding="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/leavingImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_circle_hollow" />

            <TextView
                android:id="@+id/leavingFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/arrivingImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_circle_fill" />

            <TextView
                android:id="@+id/arrivingAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </LinearLayout>

    </LinearLayout>

    <!--<android.support.v7.widget.CardView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical"-->
            <!--android:padding="20dp">-->



        <!--</LinearLayout>-->

    <!--</android.support.v7.widget.CardView>-->

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/passengerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passengers"
                android:textSize="20dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <ListView
                android:id="@+id/passengerList"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>

            <Button
                android:id="@+id/startTripButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/purple_button"
                android:textColor="@color/white"
                android:text="@string/startTrip" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>